Store RizzardiHickeyBrain CpG rowRanges as GRanges
- Counts are aggregated across strands and therefore unstranded and have width 2.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(RizzardiHickeyBrain)
 importFrom(ExperimentHub,ExperimentHub)
 importFrom(GenomeInfoDb,Seqinfo)
 importFrom(GenomicRanges,GPos)
+importFrom(GenomicRanges,GRanges)
 importFrom(HDF5Array,HDF5Array)
 importFrom(S4Vectors,endoapply)
 importFrom(SummarizedExperiment,SummarizedExperiment)
