--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,16 @@
 
 export(ChenMammaryData)
 export(RizzardiHickeyBrain)
+export(listDatasets)
 importFrom(ExperimentHub,ExperimentHub)
 importFrom(GenomeInfoDb,Seqinfo)
 importFrom(GenomicRanges,GPos)
 importFrom(GenomicRanges,GRanges)
 importFrom(HDF5Array,HDF5Array)
+importFrom(IRanges,IRanges)
+importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,endoapply)
 importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(rhdf5,h5read)
+importFrom(stats,setNames)
+importFrom(utils,read.csv)
